manifests/bookshelf-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: bookshelf
  name: bookshelf
spec:
  replicas: 3
  selector:
    matchLabels:
      app: bookshelf
  strategy: {}
  template:
    metadata:
      labels:
        app: bookshelf
      name: bookshelf
    spec:
      containers:
        - image: gcr.io/ca-willsbooster-test/bookshelf:v1.0.6
          name: bookshelf
          resources:
            requests:
              cpu: 100m
              memory: 2Gi
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              port: 8080
              path: /healthz
          volumeMounts:
            - mountPath: /secret/
              name: app-cred
      volumes:
      - name: app-cred
        secret:
            secretName: app-cred
