manifests/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bookshelf
  name: bookshelf
#  annotations:
#    cloud.google.com/backend-config: '{"ports": {"8080":"my-backendconfig"}}'
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
    nodePort: 30002
  selector:
    app: bookshelf
  type: NodePort
