manifests/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: bookshelf
spec:
  backend:
    serviceName: bookshelf
    servicePort: 8080
